# replicant

./: .env.example  .env.test  .gitignore  .gitlab-ci.yml  AUTHENTICATION.md  BUILD_STATUS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.test  EVENT_CALLBACKS.md  EVENT_LOG_IMPLEMENTATION_PLAN.md  EXAMPLES.md  FRAMEWORK_INTEGRATION.md  INTEGRATION_TEST_ANALYSIS.md  INTEGRATION_TEST_RESULTS.md  INVESTIGATION_FINDINGS.md  LICENSE  NEXT_STEPS.md  QUICKSTART.md  README.md  TESTING.md  debug_conflict.sh  docker-compose.integration-fast.yml  docker-compose.integration.yml  docker-compose.test.yml  docker-compose.yml  release.toml  run_examples.sh  run_integration_tests.sh  run_integration_tests_fast.sh  run_integration_tests_local.sh  test_concurrent_debug.sh  test_concurrent_sessions.sh  test_concurrent_simple.sh  test_concurrent_with_logs.sh  test_diagnostic.sh  test_immediate_sync_simple.py  test_integration.sh  (+7 more)
.cargo/: audit.toml
.sqlx/: query-00c6850917dcade2bc114081644a36d3850b279bd8f769743d0eed649debe781.json  query-02dc497bc8d5772971d451a1c75debba90f83b0766c8f5a74806d3f91ddf23ce.json  query-0b6212e59952f0cff8fe9e04eecea3991a3434cf485c85e2023515359c888c0b.json  query-149f797365bf674f3e1db9244953e4035c4ad4cb8a1d68f3c5e8f20f73776915.json  query-21fe3ab1ec25d8008192e3298bcb3b09da7d21f5c12383f7e92c8d23dcaf5f8f.json  query-2313576bc203b4556e28e1b997545bad39aa9e918a63fd57c180c597489ee06e.json  query-27507483b95599eb3f075dcd4e7c24d372b06c94e6dacb467adc84a806ef67a0.json  query-305f8333b86d8a8d1fecbbbb33963a72f3258eea593d9c8e45efd2d35e78ce70.json  query-428e9efcae5fb53512d7579164ec27cb04e5b6c2c946774ff76d50609253d951.json  query-4789e3cf90a0df1485c68d1f82fb51697dc65a9a4166691e88403e0cc8f95991.json  query-4d01a2da3fda4e6a4b99dcadf9a56f010bf7d55744601f6a73740dc3858d05e6.json  query-57112c8b351f4af1aca8ec7abb5ce2461d51314941ba50c2545803f00765d108.json  query-5e8a8b4c5d245eb523b3c3beadb5dc5101ec2b03bd44d935096591a5a4fbcc50.json  query-6433337333e9578571abbbfad4e54a411152c7eed11b0f779751dd26bef5d9a8.json  query-7d901d90059386d8f1ba356f9452fc0bb784b3c79d4770d03e33b1e74b8b9aac.json  query-8b574d1e31067258c5df5d99c0e605ee8a22e39212ba5d997a13af32cc98c44d.json  query-9551636ad7ff7db2814a00ef18fcbda407d9e98787ab786977b65e260141b8c8.json  (+16 more)
cmake/: FetchReplicant.cmake
examples/: README.md
examples/cpp/: CMakeLists.txt  callback_example.cpp  simple_example.cpp
sync-client/: Cargo.toml  build.rs  cbindgen.toml
sync-client/.sqlx/: query-2848b45f3205a8a2a8ff770194bc14ae3a246b531c5dd64d09ef5941e6e437fc.json
sync-client/examples/: c_event_callbacks.c  cpp_lambda_callbacks.cpp  interactive_client.rs  simple_callback_test.c  simple_cpp_callbacks.cpp  simple_sync_test.rs  task_list_example.rs  test_rust_callbacks.rs
sync-client/include/: sync_client.h  sync_client.hpp  sync_client_events.h
sync-client/migrations/: 001_initial_schema.sql  002_add_change_events.sql  003_remove_revision_id.sql  004_remove_version_vector.sql  005_add_old_content_hash.sql  006_rename_version_to_sync_revision.sql
sync-client/src/: database.rs  errors.rs  events.rs  ffi.rs  ffi_test.rs  lib.rs  offline_queue.rs  queries.rs  sync_engine.rs  websocket.rs
sync-client/tests/: common.rs  document_lifecycle_tests.rs  ffi_integration_tests.rs  sync_confirmation_tests.rs  sync_engine_tests.rs  sync_status_tests.rs
sync-core/: Cargo.toml
sync-core/src/: conflicts.rs  errors.rs  lib.rs  models.rs  patches.rs  protocol.rs
sync-core/src/ot/: mod.rs  path_utils.rs  transform.rs  types.rs
sync-core/tests/: ot_integration_tests.rs
sync-server/: Cargo.toml
sync-server/.sqlx/: query-0d58ade10201e2f584aee78d43852f857266c0544e9da916cd5bbe3b9ca66d17.json  query-6a15a15b500a79c4f8bd51bd8e02d601d8c18b011dc1836bdaa0e7263a9749aa.json  query-6c11ef03d40aac0f4984dd0c8dd6fc5062c11c9ac06455efda09ccfba00a47ed.json  query-6f27bc53b8640f68a641e9f986b19c68ce770fa42bcb1ad7481311825d4b84a0.json  query-87108e7d8e1a78704b7c8700e66ab50e54a36de687db4260fa4c4380834192e4.json  query-ab8ff9c947abc9f5e98178599f64aea58f2cfb96f4856448cb2bfcb797389cb4.json  query-bce7f6f4e882c8d8d6ea205969111a0ba2f3e86a569b2fc44d4d0512291306d9.json  query-c4434a4f91c6bf0c3004a9c30a28b5e862accee1c689dd9bc0d653f1672c8ff5.json  query-df81a8a6dfec1f0fc695afd590d1d7090f1657c572d23467d8f6a4dc9e757f12.json  query-e2b0a9a5cbb861c8fbedbe4b74b0780b5057921dc4ae966514051619684b6cb9.json
sync-server/examples/: monitoring_server.rs
sync-server/migrations/: 001_initial_schema.sql  20240101000000_initial_schema.sql  20240102000000_demo_user.sql  20241228000000_add_change_events.sql  20250110000000_add_api_credentials.sql  20250110000001_add_api_keys.sql  20250115000000_add_username_remove_password.sql  20250116000000_clean_auth.sql  20250117000000_hmac_authentication.sql  20250602000000_add_reverse_patches.sql  20250609000000_add_conflict_resolution_fields.sql  20251105000000_rename_version_to_sync_revision.sql  20251106000000_add_title_column.sql
sync-server/src/: api.rs  auth.rs  database.rs  errors.rs  lib.rs  main.rs  monitoring.rs  queries.rs  sync_handler.rs  websocket.rs
sync-server/tests/: auth_edge_cases.rs  basic_test.rs  data_integrity.rs  error_scenarios.rs  unit_tests.rs
sync-server/tests/integration/: auth_integration.rs  concurrent_clients_integration.rs  conflict_resolution_integration.rs  data_integrity.rs  debug_test.rs  helpers.rs  mod.rs  multi_client_sync_integration.rs  offline_sync_integration.rs  simple_event_test.rs  sync_flow_integration.rs  test_offline_conflict_resolution.rs  test_offline_sync_phases.rs  websocket_integration.rs
sync-server/tests_integration/: basic_test.rs  full_sync_test.rs  integration_tests.rs  sync_integration.rs  tests.rs
sync-server/tests_integration/integration/: auth_integration.rs  concurrent_clients_integration.rs  conflict_resolution_integration.rs  debug_test.rs  helpers.rs  mod.rs  multi_client_sync_integration.rs  offline_sync_integration.rs  simple_event_test.rs  sync_flow_integration.rs  test_offline_conflict_resolution.rs  test_offline_sync_phases.rs  websocket_integration.rs
(+102 files in other folders)
