[package]
name = "sync-client"
version = "0.1.0"
edition = "2021"

[dependencies]
sync-core = { path = "../sync-core" }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "json", "uuid", "chrono"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
backoff = { version = "0.4", features = ["tokio"] }
json-patch = "1.2"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]