[package]
name = "sync-client"
version = "0.1.0"
edition = "2021"

[dependencies]
sync-core = { path = "../sync-core" }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "json", "uuid", "chrono"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
backoff = { version = "0.4", features = ["tokio"] }
json-patch = "1.2"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
colored = "2.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.26"
crossterm = "0.27"

[build-dependencies]
cbindgen = "0.26"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
