[package]
name = "sync-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
json-patch = "1.2"
sha2 = "0.10"
strum = { version = "0.26", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono", "migrate"] }
argon2 = "0.5"
axum = { version = "0.7", features = ["ws"] }
tracing = { workspace = true }
tokio = { workspace = true }
