[package]
name = "sync-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "sync_server"
path = "src/lib.rs"

[[bin]]
name = "sync-server"
path = "src/main.rs"

[dependencies]
sync-core = { path = "../sync-core" }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
axum = { version = "0.7", features = ["ws"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono", "migrate", "tls-rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
dashmap = "5.5"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
futures-util = "0.3"
json-patch = "1.2"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

[dev-dependencies]
indicatif = "0.17"
sync-client = { path = "../sync-client" }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[[test]]
name = "integration"
path = "tests_integration/tests.rs"